去除用户注册送体验金、打印赛事日志